--- a/learning/Git/Настройка Git/Конфигурация сервера.md
+++ b/learning/Git/Настройка Git/Конфигурация сервера.md
@@ -1,3 +1,6 @@
+## Конфигурация сервера
+
+#git/config/server #git/конфигурация/сервер
 #### `receive.fsckObjects`
 
 Git способен убедиться, что каждый объект, отправленный командой `push`, валиден и соответствует своему SHA-1-хешу. По умолчанию эта функция отключена; это очень дорогая операция и может привести к существенному замедлению, особенно для больших объёмов отправляемых данных или для больших репозиториев. Вы можете включить проверку целостности объектов для каждой операции отправки, установив значение `receive.fsckObjects` в `true`:
